force-app/main/default/objects/AVA_SFCPQ__CompanyList__c/AVA_SFCPQ__CompanyList__c.object-meta.xml
<CustomObject>
    <label>AvaTax Company Code</label>
    <nameField>
        <label>AvaTax Company Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AvaTax Company Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>