force-app/main/default/objects/AVA_SFCPQ__CompanyList__c/fields/AVA_SFCPQ__AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__AddressLine2__c</fullName>
    <description>Enter the line 2 address of your company.</description>
    <inlineHelpText>Enter the line 2 address of your company.</inlineHelpText>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>