force-app/main/default/objects/AVA_SFCPQ__CompanyList__c/fields/AVA_SFCPQ__Company_Id__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Company_Id__c</fullName>
    <description>Enter the ID of your company.</description>
    <inlineHelpText>Enter the ID of your company.</inlineHelpText>
    <label>Company Id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>