force-app/main/default/objects/AVA_SFCPQ__CompanyList__c/fields/AVA_SFCPQ__Country__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Country__c</fullName>
    <description>Enter the country of your company.</description>
    <inlineHelpText>Enter the country of your company.</inlineHelpText>
    <label>Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>