force-app/main/default/objects/AVA_SFCPQ__CompanyList__c/listViews/AVA_SFCPQ__AvaTax_Companies.listView-meta.xml
<ListView>
    <fullName>AVA_SFCPQ__AvaTax_Companies</fullName>
    <columns>NAME</columns>
    <columns>AVA_SFCPQ__AddressLine1__c</columns>
    <columns>AVA_SFCPQ__AddressLine2__c</columns>
    <columns>AVA_SFCPQ__City__c</columns>
    <columns>AVA_SFCPQ__Country__c</columns>
    <columns>AVA_SFCPQ__PostalCode__c</columns>
    <columns>AVA_SFCPQ__State__c</columns>
    <filterScope>Everything</filterScope>
    <label>AvaTax Company Code</label>
</ListView>